soemi-woers/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soemi-woers
  labels:
    app: soemi-woers
spec:
  type: NodePort
  selector:
    app: soemi-woers
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
      name: http
